# mikoui2

./: .gitignore  .gitmodules  Cargo.toml  KEYBOARD_SHORTCUTS.md  build-debug.ps1  build-release.ps1  build.rs
.cargo/: config.toml
.rabital/: debug.yml  settings.yml  tasks.yml
app/: app.rs  state.rs
app/assets/: app.rc
app/components/: activitybar.rs  command.rs  menubar.rs  mod.rs  titlebar.rs
app/components/layouts/: bottompanel.rs  leftpanel.rs  mod.rs  rightpanel.rs  statusbar.rs
app/core/: menuitems.rs  mod.rs
app/hooks/: README.md  config_loader.rs  mod.rs
app/pages/: explorer.rs
app/theme/: kiro.rs  mod.rs  vscode.rs  xcode.rs
crates/mikocore/: Cargo.toml  lib.rs
crates/mikoeditor/: Cargo.toml  buffer.rs  editor.rs  lib.rs  syntax.rs  tab.rs  tabbar.rs
crates/mikoterminal/: Cargo.toml  build.rs  lib.rs  pty.rs  renderer.rs  terminal.rs
crates/mikoui/: Cargo.toml  build.rs  lib.rs  theme.rs
crates/mikoui/components/: button.rs  checkbox.rs  label.rs  lucide.rs  mod.rs  progress.rs  skeleton.rs  widget.rs
crates/mikoui/core/: dwm.rs  file_dialog.rs  fonts.rs  mod.rs  titlebar.rs
examples/: borderlessexample.rs  direct_skia.rs  main.rs  shadcn_demo.rs
scripts/: post-build.ps1
scripts/windows/: build-app.ps1  build.bat  post-build.ps1
shared/config/: setting.yml
shared/themes/: default.yml  greyscale.yml  moe.yml  moon.yml  neko.yml  sun.yml
src/: lib.rs  main.rs  theme.rs
src/components/: badge.rs  button.rs  card.rs  checkbox.rs  codicon.rs  contextmenu.rs  dropdown.rs  icon.rs  input.rs  label.rs  menubar.rs  mod.rs  panel.rs  progress.rs  slider.rs  widget.rs
src/core/: dwm.rs  file_dialog.rs  mod.rs  titlebar.rs
