[workspace]
resolver = "2"
members = [
    "crates/mikoui",
    "crates/mikocore",
    "crates/mikoterminal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rabital Team"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace.dependencies]
# UI and Graphics
skia-safe = { version = "0.78", features = ["textlayout"] }
winit = { version = "0.30", features = ["wayland", "x11"] }
softbuffer = "0.4"
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
image = "0.25"

# Terminal
alacritty_terminal = "0.23"
unicode-width = "0.1"
log = "0.4"

# Windows-specific
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
] }
