[workspace]
resolver = "2"
members = [
    "crates/mikoui",
    "crates/mikocore",
    "crates/mikoterminal",
    "crates/mikoeditor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rabital Team"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace.dependencies]
# UI and Graphics
skia-safe = { version = "0.78", features = ["textlayout"] }
winit = { version = "0.30", features = ["wayland", "x11"] }
softbuffer = "0.4"
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
image = "0.25"
arboard = "3.4"

# Terminal
alacritty_terminal = "0.23"
unicode-width = "0.1"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Windows-specific
windows = { version = "0.61", features = [
    "Foundation_Numerics",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[package]
name = "rabital"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rabital"
path = "app/app.rs"

[dependencies]
mikoui = { path = "crates/mikoui" }
mikocore = { path = "crates/mikocore" }
mikoterminal = { path = "crates/mikoterminal" }
mikoeditor = { path = "crates/mikoeditor" }

# Workspace dependencies
skia-safe.workspace = true
winit.workspace = true
softbuffer.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
usvg.workspace = true
resvg.workspace = true
tiny-skia.workspace = true
arboard.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[build-dependencies]
embed-resource = "2.4"
