[package]
name = "mikoeditor"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-json = "0.20"
ropey = "1.6"
skia-safe = "0.78"
